--- a/trading-react/src/page/Auth/Auth.css
+++ b/trading-react/src/page/Auth/Auth.css
@@ -16,6 +16,10 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  height: 100dvh;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
 
 
